--- a/src/index.css
+++ b/src/index.css
@@ -25,26 +25,41 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px; 
-  max-width: 1200px; 
-  margin: 0 auto; 
+  padding: 10px 20px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.navbar > a {
-  color: white; 
+.navbar-nav {
+  display: flex;
+  align-items: center;
+  gap: 8px; /* Space between links */
+}
+
+.navbar-nav a {
   text-decoration: none;
-  margin: 0 15px;
-  cursor: pointer;
-  font-weight: bold; 
+  font-weight: bold;
+  margin: 0 8px; /* Space between links */
 }
 
-.navbar > a:hover {
+.navbar-nav a:hover {
   color: rgb(136, 136, 136);
-  text-decoration: none; 
 }
 
-.navbar img {
-  width: 50px;
+.light .navbar-nav a {
+  color: black; /* Color for light mode */
+}
+
+.light .navbar-nav a:hover {
+  color: rgb(30, 149, 234);
+}
+
+.dark .navbar-nav a {
+  color: white; /* Color for dark mode */
+}
+
+.dark .navbar-nav a:hover {
+  color: rgb(145, 205, 248);
 }
 
 .theme-switch-btn {
